--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   .leaflet-container {
     position: absolute;
     width: 100vw;
-    height: 50%;
+    height: 70vh;
     margin-top: 40px;
     bottom: 0;
   }
@@ -30,13 +30,85 @@
 
 .backgroundMobile {
   width:100%;
-  height: 300px;
+  height: 200px;
   min-height: 300px;
   z-index: 999;
 }
 
 body {
   margin: 0;
+  background-image: url("../images/pattern-bg-mobile.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+
+/* Estilo para el título "IP Address Tracker" */
+.IpTittle {
+  font-family: Bold;
+  color: white;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: center;
+  width: fit-content;
+  margin-top: 20px;
+  font-size: 24px;
+}
+
+/* Estilo para el contenedor de entrada de búsqueda */
+.inputContainer {
+  position: relative;
+  border-radius: 10px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: start;
+  width: 300px;
+  height: 50px;
+  top: 70px;
+}
+
+/* Estilo para el campo de entrada de búsqueda */
+.IpSearch {
+  position: relative;
+  border-radius: 10px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  text-align: start;
+  width: 215px;
+  height: 50px;
+  font-family: regular;
+  font-size: 20px;
+  padding-left: 15px;
+}
+
+/* Estilo para el contenedor del botón de búsqueda */
+.arrowContainer {
+  height: 53px;
+  width: 70px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  margin-left: 10px;
+  right: 10px;
+  margin-top: 82px;
+  z-index: 999;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  top: -82px;
+}
+
+/* Estilo para la imagen de la flecha en el botón de búsqueda */
+.arrowContainer img {
+  width: 20px;
+  height: 20px;
+  position: absolute;
 }
 
 
