--- a/src/App.css
+++ b/src/App.css
@@ -18,21 +18,12 @@
   height: 100vh;
 }
 
-@media (min-width: 375px) {
-  .leaflet-container {
-    position: absolute;
-    width: 100vw;
-    height: 70vh;
-    margin-top: 40px;
-    bottom: 0;
-  }
-}
-
-.backgroundMobile {
-  width:100%;
-  height: 200px;
-  min-height: 300px;
-  z-index: 999;
+.leaflet-container {
+  position: absolute;
+  width: 100vw;
+  height: 70vh;
+  margin-top: 40px;
+  bottom: 0;
 }
 
 body {
@@ -41,10 +32,16 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-
-
-/* Estilo para el título "IP Address Tracker" */
+  
+  @media (min-width: 1424px) {
+    body {
+      background-image: url("../images/pattern-bg-desktop.png");
+    }
+    .leaflet-container {
+      height: 78vh;
+    }
+  }
+  
 .IpTittle {
   font-family: Bold;
   color: white;
@@ -55,10 +52,9 @@ body {
   text-align: center;
   width: fit-content;
   margin-top: 20px;
-  font-size: 24px;
+  font-size: 24px; 
 }
-
-/* Estilo para el contenedor de entrada de búsqueda */
+  
 .inputContainer {
   position: relative;
   border-radius: 10px;
@@ -70,8 +66,7 @@ body {
   height: 50px;
   top: 70px;
 }
-
-/* Estilo para el campo de entrada de búsqueda */
+  
 .IpSearch {
   position: relative;
   border-radius: 10px;
@@ -85,8 +80,6 @@ body {
   font-size: 20px;
   padding-left: 15px;
 }
-
-/* Estilo para el contenedor del botón de búsqueda */
 .arrowContainer {
   height: 53px;
   width: 70px;
@@ -105,20 +98,31 @@ body {
   cursor: pointer;
 }
 
-/* Estilo para la imagen de la flecha en el botón de búsqueda */
 .arrowContainer img {
   width: 20px;
   height: 20px;
   position: absolute;
 }
 
-
 input { 
   border: 0;
   outline: none;
   z-index: 999;
 }
+
 input::placeholder{
   font-size: 10px;
+}
+
+@media (min-width: 1024px) {
+  .inputContainer{
+    width: 600px;
+  }
+  .IpSearch{
+    width:  550px;
+  }
+  input::placeholder{
+    font-size: 16px;
+  }
 }
 
