--- a/src/components/IpInfo/IpInfo.css
+++ b/src/components/IpInfo/IpInfo.css
@@ -17,3 +17,61 @@
   .mapa {
     display: none;
   }
+
+  .infoContainer {
+    border: solid;
+    width: 270px;
+    justify-content: center;
+    z-index: 9999;
+    position: absolute;
+    text-align: center;
+    color: white;
+    background-color: white;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  @media (min-width: 1024px) {
+    .infoContainer {
+    width:70%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    text-align: center;
+    color: white;
+    background-color: white;
+    height:100px;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 100px;
+    justify-content: space-between;
+   
+    }
+    .title {
+      flex: 1;
+      text-align: start;
+     font-size: 16px;
+    }
+
+    .content {
+      flex: 1;
+      font-size: 21px;
+      margin-top: 15px;
+    }
+    .titleContentContainer{
+      margin-right: auto;
+      text-align: start;
+    }
+
+    .divider {
+      border: 0.2px solid;
+      border-color: lightgrey;
+      height: 80px;
+      width: 0px;
+      margin-right: 5%;
+      margin-left: 30px;
+      margin-top: 10px;
+    }
+
+  }
+
+  
